# web-dev-bastian-gruber

./: Cargo.toml  questions.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20230606150051_questions_table.up.sql  20230606150832_answers_table.down.sql  20230606150832_answers_table.up.sql  20230612153608_create_accounts_table.down.sql  20230612153608_create_accounts_table.up.sql  20230718051305_extend_questions_table.down.sql  20230718051305_extend_questions_table.up.sql  20230718051706_extend_answers_table.down.sql  20230718051706_extend_answers_table.up.sql
src/: main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  mod.rs  pagination.rs
