[package]
name = "practical-rust-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2", features = ["full"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
sqlx = {version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tracing = { version = "0.1", features = ["log"] }
# This is the latest version and is supposed to handle unicode but I run into other errors.
# The book prescribes 0.2.
# The issue log says to run `cargo add regex --features unicode-case` to fix the panic in main.rs
# tracing-subscriber = "0.3.17" 
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = { version = "1.8.4", features = ["unicode-case"] }
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
